project6/parser.output
Rules useless in parser due to conflicts

   94 Expression: NEW Identifier


State 110 conflicts: 13 reduce/reduce


Grammar

    0 $accept: Start $end

    1 Start: ClassList

    2 ClassList: ClassList Class
    3          | Class

    4 Class: Identifier OPEN_CURLY_BRACKET CLOSE_CURLY_BRACKET
    5      | Identifier OPEN_CURLY_BRACKET Members CLOSE_CURLY_BRACKET
    6      | Identifier OPEN_CURLY_BRACKET Methods CLOSE_CURLY_BRACKET
    7      | Identifier OPEN_CURLY_BRACKET Members Methods CLOSE_CURLY_BRACKET
    8      | Identifier EXTENDS Identifier OPEN_CURLY_BRACKET CLOSE_CURLY_BRACKET
    9      | Identifier EXTENDS Identifier OPEN_CURLY_BRACKET Members CLOSE_CURLY_BRACKET
   10      | Identifier EXTENDS Identifier OPEN_CURLY_BRACKET Methods CLOSE_CURLY_BRACKET
   11      | Identifier EXTENDS Identifier OPEN_CURLY_BRACKET Members Methods CLOSE_CURLY_BRACKET

   12 Members: Members Member
   13        | Member

   14 Member: Type SingleIdentifierList SEMICOLON

   15 SingleIdentifierList: Identifier

   16 Identifier: NAME

   17 Type: IntegerType
   18     | BooleanType
   19     | ObjectType

   20 IntegerType: INTEGER

   21 BooleanType: BOOLEAN

   22 ObjectType: Identifier

   23 Methods: Methods Method
   24        | Method

   25 Method: Identifier OPEN_PARENTHESES Parameters CLOSE_PARENTHESES ARROW ReturnType OPEN_CURLY_BRACKET MethodBody CLOSE_CURLY_BRACKET
   26       | Identifier OPEN_PARENTHESES CLOSE_PARENTHESES ARROW ReturnType OPEN_CURLY_BRACKET MethodBody CLOSE_CURLY_BRACKET

   27 ReturnType: Type
   28           | NoneType

   29 NoneType: NONE

   30 Parameters: Parameters COMMA Parameter
   31           | Parameter

   32 Parameter: Type Identifier

   33 MethodBody: Return
   34           | Declarations
   35           | Declarations Return
   36           | Statements
   37           | Statements Return
   38           | Declarations Statements
   39           | Declarations Statements Return
   40           | %empty

   41 Declarations: Declarations Declaration
   42             | Declaration

   43 Declaration: Type Identifiers SEMICOLON

   44 Identifiers: Identifiers COMMA Identifier
   45            | Identifier

   46 Statements: Statements Statement
   47           | Statement

   48 Return: RETURN Expression SEMICOLON

   49 Statement: Assignment
   50          | Call
   51          | IfElse
   52          | WhileLoop
   53          | DoWhile
   54          | Print

   55 Call: MethodCall SEMICOLON

   56 Assignment: Identifier ASSIGNMENT Expression SEMICOLON
   57           | Identifier DOT Identifier ASSIGNMENT Expression SEMICOLON
   58           | Identifier ARROW Identifier ASSIGNMENT Expression SEMICOLON

   59 MethodCall: Identifier OPEN_PARENTHESES Arguments CLOSE_PARENTHESES
   60           | Identifier DOT Identifier OPEN_PARENTHESES Arguments CLOSE_PARENTHESES
   61           | Identifier ARROW Identifier OPEN_PARENTHESES Arguments CLOSE_PARENTHESES
   62           | Identifier OPEN_PARENTHESES CLOSE_PARENTHESES
   63           | Identifier DOT Identifier OPEN_PARENTHESES CLOSE_PARENTHESES
   64           | Identifier ARROW Identifier OPEN_PARENTHESES CLOSE_PARENTHESES

   65 Arguments: Arguments COMMA Expression
   66          | Expression

   67 IfElse: IF Expression OPEN_CURLY_BRACKET Statements CLOSE_CURLY_BRACKET
   68       | IF Expression OPEN_CURLY_BRACKET Statements CLOSE_CURLY_BRACKET ELSE OPEN_CURLY_BRACKET Statements CLOSE_CURLY_BRACKET

   69 WhileLoop: WHILE Expression OPEN_CURLY_BRACKET Statements CLOSE_CURLY_BRACKET

   70 DoWhile: DO OPEN_CURLY_BRACKET Statements CLOSE_CURLY_BRACKET WHILE OPEN_PARENTHESES Expression CLOSE_PARENTHESES SEMICOLON

   71 Print: PRINT Expression SEMICOLON

   72 Expression: Expression PLUS Expression
   73           | Expression MINUS Expression
   74           | Expression MULTIPLY Expression
   75           | Expression DIVIDE Expression
   76           | Expression GREATER_THAN_EXCLUSIVE Expression
   77           | Expression GREATER_THAN_INCLUSIVE Expression
   78           | Expression EQUALS Expression
   79           | Expression AND Expression
   80           | Expression OR Expression
   81           | NOT Expression
   82           | MINUS Expression
   83           | Variable
   84           | Identifier DOT Identifier
   85           | Identifier ARROW Identifier
   86           | MethodCall
   87           | OPEN_PARENTHESES Expression CLOSE_PARENTHESES
   88           | NUMBER
   89           | TRUE
   90           | FALSE
   91           | NEW Identifier
   92           | NEW Identifier OPEN_PARENTHESES Arguments CLOSE_PARENTHESES
   93           | NEW Identifier OPEN_PARENTHESES CLOSE_PARENTHESES
   94           | NEW Identifier

   95 Variable: Identifier


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    PRINT (258) 71
    RETURN (259) 48
    IF (260) 67 68
    ELSE (261) 68
    WHILE (262) 69 70
    NEW (263) 91 92 93 94
    INTEGER (264) 20
    BOOLEAN (265) 21
    NONE (266) 29
    EQUALS (267) 78
    AND (268) 79
    OR (269) 80
    NOT (270) 81
    TRUE (271) 89
    FALSE (272) 90
    EXTENDS (273) 8 9 10 11
    DO (274) 70
    NUMBER <base_int> (275) 88
    NAME <base_char_ptr> (276) 16
    OPEN_CURLY_BRACKET (277) 4 5 6 7 8 9 10 11 25 26 67 68 69 70
    CLOSE_CURLY_BRACKET (278) 4 5 6 7 8 9 10 11 25 26 67 68 69 70
    OPEN_PARENTHESES (279) 25 26 59 60 61 62 63 64 70 87 92 93
    CLOSE_PARENTHESES (280) 25 26 59 60 61 62 63 64 70 87 92 93
    ASSIGNMENT (281) 56 57 58
    DOT (282) 57 60 63 84
    COMMA (283) 30 44 65
    SEMICOLON (284) 14 43 48 55 56 57 58 70 71
    ARROW (285) 25 26 58 61 64 85
    PLUS (286) 72
    MINUS (287) 73 82
    MULTIPLY (288) 74
    DIVIDE (289) 75
    GREATER_THAN_EXCLUSIVE (290) 76
    GREATER_THAN_INCLUSIVE (291) 77
    UNARY_MINUS (292)


Nonterminals, with rules where they appear

    $accept (38)
        on left: 0
    Start <program_ptr> (39)
        on left: 1
        on right: 0
    ClassList <class_list_ptr> (40)
        on left: 2 3
        on right: 1 2
    Class <class_ptr> (41)
        on left: 4 5 6 7 8 9 10 11
        on right: 2 3
    Members <declaration_list_ptr> (42)
        on left: 12 13
        on right: 5 7 9 11 12
    Member <declaration_ptr> (43)
        on left: 14
        on right: 12 13
    SingleIdentifierList <identifier_list_ptr> (44)
        on left: 15
        on right: 14
    Identifier <identifier_ptr> (45)
        on left: 16
        on right: 4 5 6 7 8 9 10 11 15 22 25 26 32 44 45 56 57 58 59 60 61 62 63 64 84 85 91 92 93 94 95
    Type <type_ptr> (46)
        on left: 17 18 19
        on right: 14 27 32 43
    IntegerType <integertype_ptr> (47)
        on left: 20
        on right: 17
    BooleanType <booleantype_ptr> (48)
        on left: 21
        on right: 18
    ObjectType <objecttype_ptr> (49)
        on left: 22
        on right: 19
    Methods <method_list_ptr> (50)
        on left: 23 24
        on right: 6 7 10 11 23
    Method <method_ptr> (51)
        on left: 25 26
        on right: 23 24
    ReturnType <type_ptr> (52)
        on left: 27 28
        on right: 25 26
    NoneType <none_ptr> (53)
        on left: 29
        on right: 28
    Parameters <parameter_list_ptr> (54)
        on left: 30 31
        on right: 25 30
    Parameter <parameter_ptr> (55)
        on left: 32
        on right: 30 31
    MethodBody <methodbody_ptr> (56)
        on left: 33 34 35 36 37 38 39 40
        on right: 25 26
    Declarations <declaration_list_ptr> (57)
        on left: 41 42
        on right: 34 35 38 39 41
    Declaration <declaration_ptr> (58)
        on left: 43
        on right: 41 42
    Identifiers <identifier_list_ptr> (59)
        on left: 44 45
        on right: 43 44
    Statements <statement_list_ptr> (60)
        on left: 46 47
        on right: 36 37 38 39 46 67 68 69 70
    Return <returnstatement_ptr> (61)
        on left: 48
        on right: 33 35 37 39
    Statement <statement_ptr> (62)
        on left: 49 50 51 52 53 54
        on right: 46 47
    Call <call_ptr> (63)
        on left: 55
        on right: 50
    Assignment <assignment_ptr> (64)
        on left: 56 57 58
        on right: 49
    MethodCall <methodcall_ptr> (65)
        on left: 59 60 61 62 63 64
        on right: 55 86
    Arguments <expression_list_ptr> (66)
        on left: 65 66
        on right: 59 60 61 65 92
    IfElse <ifelse_ptr> (67)
        on left: 67 68
        on right: 51
    WhileLoop <while_ptr> (68)
        on left: 69
        on right: 52
    DoWhile <dowhile_ptr> (69)
        on left: 70
        on right: 53
    Print <print_ptr> (70)
        on left: 71
        on right: 54
    Expression <expression_ptr> (71)
        on left: 72 73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94
        on right: 48 56 57 58 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 87
    Variable <variable_ptr> (72)
        on left: 95
        on right: 83


State 0

    0 $accept: • Start $end

    NAME  shift, and go to state 1

    Start       go to state 2
    ClassList   go to state 3
    Class       go to state 4
    Identifier  go to state 5


State 1

   16 Identifier: NAME •

    $default  reduce using rule 16 (Identifier)


State 2

    0 $accept: Start • $end

    $end  shift, and go to state 6


State 3

    1 Start: ClassList •
    2 ClassList: ClassList • Class

    NAME  shift, and go to state 1

    $default  reduce using rule 1 (Start)

    Class       go to state 7
    Identifier  go to state 5


State 4

    3 ClassList: Class •

    $default  reduce using rule 3 (ClassList)


State 5

    4 Class: Identifier • OPEN_CURLY_BRACKET CLOSE_CURLY_BRACKET
    5      | Identifier • OPEN_CURLY_BRACKET Members CLOSE_CURLY_BRACKET
    6      | Identifier • OPEN_CURLY_BRACKET Methods CLOSE_CURLY_BRACKET
    7      | Identifier • OPEN_CURLY_BRACKET Members Methods CLOSE_CURLY_BRACKET
    8      | Identifier • EXTENDS Identifier OPEN_CURLY_BRACKET CLOSE_CURLY_BRACKET
    9      | Identifier • EXTENDS Identifier OPEN_CURLY_BRACKET Members CLOSE_CURLY_BRACKET
   10      | Identifier • EXTENDS Identifier OPEN_CURLY_BRACKET Methods CLOSE_CURLY_BRACKET
   11      | Identifier • EXTENDS Identifier OPEN_CURLY_BRACKET Members Methods CLOSE_CURLY_BRACKET

    EXTENDS             shift, and go to state 8
    OPEN_CURLY_BRACKET  shift, and go to state 9


State 6

    0 $accept: Start $end •

    $default  accept


State 7

    2 ClassList: ClassList Class •

    $default  reduce using rule 2 (ClassList)


State 8

    8 Class: Identifier EXTENDS • Identifier OPEN_CURLY_BRACKET CLOSE_CURLY_BRACKET
    9      | Identifier EXTENDS • Identifier OPEN_CURLY_BRACKET Members CLOSE_CURLY_BRACKET
   10      | Identifier EXTENDS • Identifier OPEN_CURLY_BRACKET Methods CLOSE_CURLY_BRACKET
   11      | Identifier EXTENDS • Identifier OPEN_CURLY_BRACKET Members Methods CLOSE_CURLY_BRACKET

    NAME  shift, and go to state 1

    Identifier  go to state 10


State 9

    4 Class: Identifier OPEN_CURLY_BRACKET • CLOSE_CURLY_BRACKET
    5      | Identifier OPEN_CURLY_BRACKET • Members CLOSE_CURLY_BRACKET
    6      | Identifier OPEN_CURLY_BRACKET • Methods CLOSE_CURLY_BRACKET
    7      | Identifier OPEN_CURLY_BRACKET • Members Methods CLOSE_CURLY_BRACKET

    INTEGER              shift, and go to state 11
    BOOLEAN              shift, and go to state 12
    NAME                 shift, and go to state 1
    CLOSE_CURLY_BRACKET  shift, and go to state 13

    Members      go to state 14
    Member       go to state 15
    Identifier   go to state 16
    Type         go to state 17
    IntegerType  go to state 18
    BooleanType  go to state 19
    ObjectType   go to state 20
    Methods      go to state 21
    Method       go to state 22


State 10

    8 Class: Identifier EXTENDS Identifier • OPEN_CURLY_BRACKET CLOSE_CURLY_BRACKET
    9      | Identifier EXTENDS Identifier • OPEN_CURLY_BRACKET Members CLOSE_CURLY_BRACKET
   10      | Identifier EXTENDS Identifier • OPEN_CURLY_BRACKET Methods CLOSE_CURLY_BRACKET
   11      | Identifier EXTENDS Identifier • OPEN_CURLY_BRACKET Members Methods CLOSE_CURLY_BRACKET

    OPEN_CURLY_BRACKET  shift, and go to state 23


State 11

   20 IntegerType: INTEGER •

    $default  reduce using rule 20 (IntegerType)


State 12

   21 BooleanType: BOOLEAN •

    $default  reduce using rule 21 (BooleanType)


State 13

    4 Class: Identifier OPEN_CURLY_BRACKET CLOSE_CURLY_BRACKET •

    $default  reduce using rule 4 (Class)


State 14

    5 Class: Identifier OPEN_CURLY_BRACKET Members • CLOSE_CURLY_BRACKET
    7      | Identifier OPEN_CURLY_BRACKET Members • Methods CLOSE_CURLY_BRACKET
   12 Members: Members • Member

    INTEGER              shift, and go to state 11
    BOOLEAN              shift, and go to state 12
    NAME                 shift, and go to state 1
    CLOSE_CURLY_BRACKET  shift, and go to state 24

    Member       go to state 25
    Identifier   go to state 16
    Type         go to state 17
    IntegerType  go to state 18
    BooleanType  go to state 19
    ObjectType   go to state 20
    Methods      go to state 26
    Method       go to state 22


State 15

   13 Members: Member •

    $default  reduce using rule 13 (Members)


State 16

   22 ObjectType: Identifier •
   25 Method: Identifier • OPEN_PARENTHESES Parameters CLOSE_PARENTHESES ARROW ReturnType OPEN_CURLY_BRACKET MethodBody CLOSE_CURLY_BRACKET
   26       | Identifier • OPEN_PARENTHESES CLOSE_PARENTHESES ARROW ReturnType OPEN_CURLY_BRACKET MethodBody CLOSE_CURLY_BRACKET

    OPEN_PARENTHESES  shift, and go to state 27

    $default  reduce using rule 22 (ObjectType)


State 17

   14 Member: Type • SingleIdentifierList SEMICOLON

    NAME  shift, and go to state 1

    SingleIdentifierList  go to state 28
    Identifier            go to state 29


State 18

   17 Type: IntegerType •

    $default  reduce using rule 17 (Type)


State 19

   18 Type: BooleanType •

    $default  reduce using rule 18 (Type)


State 20

   19 Type: ObjectType •

    $default  reduce using rule 19 (Type)


State 21

    6 Class: Identifier OPEN_CURLY_BRACKET Methods • CLOSE_CURLY_BRACKET
   23 Methods: Methods • Method

    NAME                 shift, and go to state 1
    CLOSE_CURLY_BRACKET  shift, and go to state 30

    Identifier  go to state 31
    Method      go to state 32


State 22

   24 Methods: Method •

    $default  reduce using rule 24 (Methods)


State 23

    8 Class: Identifier EXTENDS Identifier OPEN_CURLY_BRACKET • CLOSE_CURLY_BRACKET
    9      | Identifier EXTENDS Identifier OPEN_CURLY_BRACKET • Members CLOSE_CURLY_BRACKET
   10      | Identifier EXTENDS Identifier OPEN_CURLY_BRACKET • Methods CLOSE_CURLY_BRACKET
   11      | Identifier EXTENDS Identifier OPEN_CURLY_BRACKET • Members Methods CLOSE_CURLY_BRACKET

    INTEGER              shift, and go to state 11
    BOOLEAN              shift, and go to state 12
    NAME                 shift, and go to state 1
    CLOSE_CURLY_BRACKET  shift, and go to state 33

    Members      go to state 34
    Member       go to state 15
    Identifier   go to state 16
    Type         go to state 17
    IntegerType  go to state 18
    BooleanType  go to state 19
    ObjectType   go to state 20
    Methods      go to state 35
    Method       go to state 22


State 24

    5 Class: Identifier OPEN_CURLY_BRACKET Members CLOSE_CURLY_BRACKET •

    $default  reduce using rule 5 (Class)


State 25

   12 Members: Members Member •

    $default  reduce using rule 12 (Members)


State 26

    7 Class: Identifier OPEN_CURLY_BRACKET Members Methods • CLOSE_CURLY_BRACKET
   23 Methods: Methods • Method

    NAME                 shift, and go to state 1
    CLOSE_CURLY_BRACKET  shift, and go to state 36

    Identifier  go to state 31
    Method      go to state 32


State 27

   25 Method: Identifier OPEN_PARENTHESES • Parameters CLOSE_PARENTHESES ARROW ReturnType OPEN_CURLY_BRACKET MethodBody CLOSE_CURLY_BRACKET
   26       | Identifier OPEN_PARENTHESES • CLOSE_PARENTHESES ARROW ReturnType OPEN_CURLY_BRACKET MethodBody CLOSE_CURLY_BRACKET

    INTEGER            shift, and go to state 11
    BOOLEAN            shift, and go to state 12
    NAME               shift, and go to state 1
    CLOSE_PARENTHESES  shift, and go to state 37

    Identifier   go to state 38
    Type         go to state 39
    IntegerType  go to state 18
    BooleanType  go to state 19
    ObjectType   go to state 20
    Parameters   go to state 40
    Parameter    go to state 41


State 28

   14 Member: Type SingleIdentifierList • SEMICOLON

    SEMICOLON  shift, and go to state 42


State 29

   15 SingleIdentifierList: Identifier •

    $default  reduce using rule 15 (SingleIdentifierList)


State 30

    6 Class: Identifier OPEN_CURLY_BRACKET Methods CLOSE_CURLY_BRACKET •

    $default  reduce using rule 6 (Class)


State 31

   25 Method: Identifier • OPEN_PARENTHESES Parameters CLOSE_PARENTHESES ARROW ReturnType OPEN_CURLY_BRACKET MethodBody CLOSE_CURLY_BRACKET
   26       | Identifier • OPEN_PARENTHESES CLOSE_PARENTHESES ARROW ReturnType OPEN_CURLY_BRACKET MethodBody CLOSE_CURLY_BRACKET

    OPEN_PARENTHESES  shift, and go to state 27


State 32

   23 Methods: Methods Method •

    $default  reduce using rule 23 (Methods)


State 33

    8 Class: Identifier EXTENDS Identifier OPEN_CURLY_BRACKET CLOSE_CURLY_BRACKET •

    $default  reduce using rule 8 (Class)


State 34

    9 Class: Identifier EXTENDS Identifier OPEN_CURLY_BRACKET Members • CLOSE_CURLY_BRACKET
   11      | Identifier EXTENDS Identifier OPEN_CURLY_BRACKET Members • Methods CLOSE_CURLY_BRACKET
   12 Members: Members • Member

    INTEGER              shift, and go to state 11
    BOOLEAN              shift, and go to state 12
    NAME                 shift, and go to state 1
    CLOSE_CURLY_BRACKET  shift, and go to state 43

    Member       go to state 25
    Identifier   go to state 16
    Type         go to state 17
    IntegerType  go to state 18
    BooleanType  go to state 19
    ObjectType   go to state 20
    Methods      go to state 44
    Method       go to state 22


State 35

   10 Class: Identifier EXTENDS Identifier OPEN_CURLY_BRACKET Methods • CLOSE_CURLY_BRACKET
   23 Methods: Methods • Method

    NAME                 shift, and go to state 1
    CLOSE_CURLY_BRACKET  shift, and go to state 45

    Identifier  go to state 31
    Method      go to state 32


State 36

    7 Class: Identifier OPEN_CURLY_BRACKET Members Methods CLOSE_CURLY_BRACKET •

    $default  reduce using rule 7 (Class)


State 37

   26 Method: Identifier OPEN_PARENTHESES CLOSE_PARENTHESES • ARROW ReturnType OPEN_CURLY_BRACKET MethodBody CLOSE_CURLY_BRACKET

    ARROW  shift, and go to state 46


State 38

   22 ObjectType: Identifier •

    $default  reduce using rule 22 (ObjectType)


State 39

   32 Parameter: Type • Identifier

    NAME  shift, and go to state 1

    Identifier  go to state 47


State 40

   25 Method: Identifier OPEN_PARENTHESES Parameters • CLOSE_PARENTHESES ARROW ReturnType OPEN_CURLY_BRACKET MethodBody CLOSE_CURLY_BRACKET
   30 Parameters: Parameters • COMMA Parameter

    CLOSE_PARENTHESES  shift, and go to state 48
    COMMA              shift, and go to state 49


State 41

   31 Parameters: Parameter •

    $default  reduce using rule 31 (Parameters)


State 42

   14 Member: Type SingleIdentifierList SEMICOLON •

    $default  reduce using rule 14 (Member)


State 43

    9 Class: Identifier EXTENDS Identifier OPEN_CURLY_BRACKET Members CLOSE_CURLY_BRACKET •

    $default  reduce using rule 9 (Class)


State 44

   11 Class: Identifier EXTENDS Identifier OPEN_CURLY_BRACKET Members Methods • CLOSE_CURLY_BRACKET
   23 Methods: Methods • Method

    NAME                 shift, and go to state 1
    CLOSE_CURLY_BRACKET  shift, and go to state 50

    Identifier  go to state 31
    Method      go to state 32


State 45

   10 Class: Identifier EXTENDS Identifier OPEN_CURLY_BRACKET Methods CLOSE_CURLY_BRACKET •

    $default  reduce using rule 10 (Class)


State 46
